k8s/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-db
  namespace: my-app
spec:
  selector:
    app: backend-db
  ports:
  - protocol: TCP
    port: 7687
    targetPort: 7687
  type: LoadBalancer
